--- a/web/bower.json
+++ b/web/bower.json
@@ -24,6 +24,7 @@
     "restangular": "~1.4.0",
     "jquery-knob": "~1.2.8",
     "font-awesome": "~4.1.0",
-    "angular": "1.3.0-beta.11"
+    "angular": "1.3.0-beta.11",
+    "moment": "~2.7.0"
   }
 }
