--- a/web/bower.json
+++ b/web/bower.json
@@ -25,6 +25,7 @@
     "jquery-knob": "~1.2.8",
     "font-awesome": "~4.1.0",
     "angular": "1.3.0-beta.11",
-    "moment": "~2.7.0"
+    "moment": "~2.7.0",
+    "angular-bootstrap": "~0.11.0"
   }
 }
