--- a/web/bower.json
+++ b/web/bower.json
@@ -24,8 +24,10 @@
     "restangular": "~1.4.0",
     "jquery-knob": "~1.2.8",
     "font-awesome": "~4.1.0",
-    "angular": "1.3.0-beta.11",
+    "angular": "1.3.0-beta.10",
     "moment": "~2.7.0",
-    "angular-bootstrap": "~0.11.0"
+    "angular-bootstrap": "~0.11.0",
+    "angular-loading-bar": "~0.4.3",
+    "angular-animate": "~1.2.19"
   }
 }
