--- a/web/bower.json
+++ b/web/bower.json
@@ -28,6 +28,7 @@
     "moment": "~2.7.0",
     "angular-bootstrap": "~0.11.0",
     "angular-loading-bar": "~0.4.3",
-    "angular-animate": "~1.2.19"
+    "angular-animate": "~1.2.19",
+    "colors": "~2.0.0"
   }
 }
