--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -74,7 +74,7 @@ http {
         proxy_set_header       Host $http_host;
       }
 
-      location ~ ^/(api|u|d|c)/ {
+      location ~ ^/(api|u|d)/ {
         proxy_pass          http://localhost:3000;
         proxy_set_header    Host $http_host;
       }
