--- a/web/bower.json
+++ b/web/bower.json
@@ -29,6 +29,7 @@
     "angular-loading-bar": "~0.5.2",
     "angular-animate": "~1.3.0-rc.0",
     "colors": "~2.0.0",
-    "angular-bootstrap": "~0.11.0"
+    "angular-bootstrap": "~0.11.0",
+    "toastr": "~2.0.3"
   }
 }
